# douga

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  compose.yaml  eslint.config.mjs  package.json  playwright.config.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
apps/backend/: pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20260711_0001_baseline.py  20260711_0002_auth.py  20260711_0003_projects.py  20260711_0004_assets.py  20260711_0005_project_assets.py  20260711_0006_jobs_and_image_generations.py  20260711_0007_exports.py  20260712_0008_assistant_conversations.py  20260712_0009_assistant_run_events.py  20260712_0010_assistant_tools_creative_documents.py  20260712_0011_assistant_run_undo.py  20260712_0012_assistant_approval_state.py  20260712_0013_preview_exports_and_active_runs.py  20260712_0014_api_tokens.py  20260712_0015_automation_operations.py  20260712_0016_idempotency_failed_state.py  20260713_0017_image_edit_parent_asset.py  20260719_0018_default_video_fps_10.py
apps/backend/src/douga/: __init__.py  api_main.py  worker_main.py  worker_tasks.py
apps/backend/src/douga/core/: __init__.py  config.py  (+2 more)
apps/backend/tests/: conftest.py
apps/backend/tests/agent_evals/: test_fixed_assistant_cases.py
apps/backend/tests/integration/: test_api_token_flow.py  test_asset_flow.py  test_assistant_agent_evaluation.py  test_assistant_approval_flow.py  test_assistant_flow.py  test_assistant_project_tools.py  test_auth_flow.py  test_creative_document_flow.py  test_database.py  test_export_flow.py  test_image_generation_flow.py  test_project_flow.py
apps/backend/tests/unit/: test_api_main.py
(+337 files in other folders)
