[project]
name = "douga-workspace"
version = "0.1.0"
requires-python = ">=3.14,<3.15"

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29",
    "mypy>=2.2.0,<3",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.21,<0.16",
    "types-jsonschema>=4.26.0.20260518,<5",
    "types-aiofiles>=25.1.0.20260518,<26",
]

[tool.uv.workspace]
members = ["apps/backend"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["apps/backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"apps/backend/tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "apps/backend/src"
