[project]
name = "douga-backend"
version = "0.1.0"
description = "Douga web video editor API"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.5,<2",
    "argon2-cffi>=25.1.0,<26",
    "asyncpg>=0.31.0,<0.32",
    "email-validator>=2.3.0,<3",
    "fastapi>=0.139.0,<0.140",
    "jsonschema>=4.25.1,<5",
    "aiofiles>=25.1.0,<26",
    "pillow>=12.1.0,<13",
    "pydantic-settings>=2.14.2,<3",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    "uvicorn[standard]>=0.51.0,<0.52",
]

[project.scripts]
douga-api = "douga.api_main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/douga"]
